--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
 		"start": "wp-scripts start"
 	},
 	"devDependencies": {
+		"@mui/icons-material": "^5.15.10",
+		"@wordpress/icons": "^9.43.0",
 		"@wordpress/scripts": "^26.19.0"
+	},
+	"dependencies": {
+		"@emotion/react": "^11.11.3",
+		"@emotion/styled": "^11.11.0"
 	}
 }
