--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,11 +35,11 @@ jobs:
 
       - name: "Create a Release Archive"
         run: |
-          zip -r dp-lazy-load.zip .
+          zip -r dp-notifications.zip .
 
       - name: "Create a GitHub Release"
         uses: softprops/action-gh-release@v1
         with:
-          files: dp-lazy-load.zip
+          files: dp-notifications.zip
         env:
           GITHUB_TOKEN: ${{ secrets.WPSCIPTSTOKEN }}  # Ensure this token has the right permissions
